<resources>
    <string name="app_name">Math Assistant</string>
    <string name="sin"><b>sin</b></string>
    <string name="cos"><b>cos</b></string>
    <string name="tan"><b>tan</b></string>
    <string name="log"><b>log</b></string>
    <string name="asin"><b>asin</b></string>
    <string name="acos"><b>acos</b></string>
    <string name="atan"><b>atan</b></string>
    <string name="exp"><b>exp</b></string>
    <string name="abs"><b>abs</b></string>
    <string name="nine"><b>9</b></string>
    <string name="six"><b>6</b></string>
    <string name="three"><b>3</b></string>
    <string name="divide"><b>÷</b></string>
    <string name="var"><b>x</b></string>
    <string name="dot"><b>.</b></string>
    <string name="left_bracket"><b>(</b></string>
    <string name="multiply"><b>×</b></string>
    <string name="right_bracket"><b>)</b></string>
    <string name="sqrt"><b>√</b></string>
    <string name="power"><b>^</b></string>
    <string name="equal"><b>=</b></string>
    <string name="minus"><b>-</b></string>
    <string name="plus"><b>+</b></string>
    <string name="eight"><b>8</b></string>
    <string name="five"><b>5</b></string>
    <string name="two"><b>2</b></string>
    <string name="zero"><b>0</b></string>
    <string name="seven"><b>7</b></string>
    <string name="four"><b>4</b></string>
    <string name="one"><b>1</b></string>
    <string name="practice_icon">Practice icon</string>
    <string name="practice">Practice</string>
    <string name="calculus_icon">Calculus icon</string>
    <string name="calculus">Calculus</string>
    <string name="measuring_icon">Measuring icon</string>
    <string name="measure_height">Measure Height</string>
    <string name="submit">Submit</string>
    <string name="question">Question:</string>
    <string name="next">next</string>
    <string name="see_calculations">see calculations</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="auto_dark_mode">Auto dark mode</string>
    <string name="information">Touch the circle to calculate the height</string>
    <string name="enter_distance">enter distance</string>
    <string name="enter_altitude">enter altitude</string>
    <string name="default_altitude">1.5</string>
    <string name="distance_to_object">Distance to object:</string>
    <string name="phone_altitude">Phone altitude:</string>
    <string name="current_angle">Current Angle</string>
</resources>